# Aleph

./: README.md  default.cfg  pyproject.toml
aleph/: __init__.py  auth.py  cli.py  db.py  filters.py  forms.py  groups.py  payments.py  schema.sql  students.py  utils.py
aleph/static/: aleph.js  pico.css  print.css  style.css  tom-select.default.css
aleph/templates/: 403.html  404.html  add.html  base.html  bulk_dialog.html  globals.html  table.html  view.html
aleph/templates/auth/: log-in.html
aleph/templates/groups/: add.html  group.html  group_form.html  index.html  levels.html  print.html  teachers.html  view.html
aleph/templates/payments/: import_file.html  index.html  payment.html
aleph/templates/students/: add.html  delete.html  email.html  index.html  sms.html  student.html  student_data.html  student_form.html  view.html
tests/: Groups.sql  Parents.sql  Students.sql  conftest.py  test_db.py  test_filters.py
