[tool.poetry]
name = "aleph"
version = "0.1.0"
description = ""
authors = ["Marcin Wróbel <mpwrob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
wtforms = {extras = ["email"], version = "^3.1.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
